# jeltz

./: ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
d0/ef3819a6b6/: metadata.json
d0/ef3819a6b6/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
docs/: getting-started.md  self-describing-protocol.md  writing-adapters.md  writing-profiles.md
profiles/: mock_sensor.toml
src/jeltz/adapters/: mock.py
src/jeltz/chat/: __init__.py  client.py  render.py
src/jeltz/cli/: __init__.py
src/jeltz/devices/: model.py
src/jeltz/gateway/: aggregator.py  fleet.py  recorder.py  server.py
src/jeltz/profiles/: generator.py
src/jeltz/storage/: __init__.py  retention.py  store.py
tests/: test_cli.py
tests/test_chat/: test_cli.py  test_client.py  test_render.py
tests/test_gateway/: test_aggregator.py  test_fleet.py  test_recorder.py  test_server.py
tests/test_profiles/: test_generator.py
tests/test_storage/: test_retention.py  test_store.py
