[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jeltz"
version = "0.1.0"
description = "MCP gateway for physical devices"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "aiosqlite>=0.20",
    "mcp>=1.0",
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6",
    "paho-mqtt>=2.0",
]

[project.optional-dependencies]
chat = ["openai>=1.0"]

[project.scripts]
jeltz = "jeltz.cli:main"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "openai>=1.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
lint = "ruff check src tests"
typecheck = "mypy src"
dev = "python -m jeltz"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["serial_asyncio", "serial_asyncio.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jeltz.adapters.mqtt"
disable_error_code = ["attr-defined", "name-defined"]
